# ai_recruitment_rag

./: api_server.py  app.py  config.py  data_augmentor.py  main.py  pyproject.toml  requirements.txt  utils.py
embeddings/: indexer.py
ingestion/: ocr.py  parser.py
ner/: ner_model.py
prompts/: templates.json
rag/: rag_chain.py
ranking/: topsis_ranking.py
retriever/: retriever.py
scoring/: scoring.py
